Cleaning country datasets
Need to find a way of dealing with the countries that are named differently between datasets. The next step is to plot the amount of natural disasters per million square miles

--- a/Global_Natural_Disaster.ipynb
+++ b/Global_Natural_Disaster.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "1f9cfcbf",
    "metadata": {},
    "outputs": [
@@ -22,7 +22,7 @@
       "License(s): CC-BY-SA-4.0\n",
       "Downloading global-natural-disasters-dataset-19602018.zip to /mnt/c/Users/Bryan Keating/BK Laptop/Discovery/Kaggle/Global Natural Disaster Analysis\n",
       "  0%|                                                | 0.00/499k [00:00<?, ?B/s]\n",
-      "100%|████████████████████████████████████████| 499k/499k [00:00<00:00, 75.0MB/s]\n"
+      "100%|████████████████████████████████████████| 499k/499k [00:00<00:00, 62.3MB/s]\n"
      ]
     }
    ],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "id": "b1a8a38a",
    "metadata": {},
    "outputs": [
@@ -46,13 +46,13 @@
     }
    ],
    "source": [
-    "!unzip global-natural-disasters-dataset-19602018.zip\n",
+    "!unzip -o global-natural-disasters-dataset-19602018.zip\n",
     "!rm global-natural-disasters-dataset-19602018.zip"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "id": "7ad68606",
    "metadata": {},
    "outputs": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "66574d50",
    "metadata": {},
    "outputs": [
@@ -197,7 +197,7 @@
        "4        flood    Africa  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,13 +209,13 @@
     "import seaborn as sns\n",
     "\n",
     "# Dataset to pandas dataframe\n",
-    "df = pd.read_csv('nasa_disaster_dataset.csv')\n",
-    "df.head()"
+    "disaster_df = pd.read_csv('nasa_disaster_dataset.csv')\n",
+    "disaster_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "id": "7388838d",
    "metadata": {},
    "outputs": [
@@ -230,8 +230,8 @@
    ],
    "source": [
     "# Dataset size and shape\n",
-    "print(\"Shape of the dataset: {0} rows and {1} columns\".format(df.shape[0], df.shape[1]))\n",
-    "print(f\"Size of the dataset: {df.size} elements\")\n"
+    "print(\"Shape of the dataset: {0} rows and {1} columns\".format(disaster_df.shape[0], disaster_df.shape[1]))\n",
+    "print(f\"Size of the dataset: {disaster_df.size} elements\")\n"
    ]
   },
   {
@@ -239,22 +239,12 @@
    "execution_count": null,
    "id": "229f3556",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index(['id', 'country', 'geolocation', 'level', 'adm1', 'location',\n",
-      "       'disastertype', 'continent'],\n",
-      "      dtype='object')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 22,
    "id": "802b2152",
    "metadata": {},
    "outputs": [
@@ -276,13 +266,13 @@
    ],
    "source": [
     "# Count disasters by continent\n",
-    "continent_counts = df['continent'].value_counts()\n",
+    "continent_counts = disaster_df['continent'].value_counts()\n",
     "print(continent_counts)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 23,
    "id": "7084f66a",
    "metadata": {},
    "outputs": [
@@ -305,12 +295,12 @@
    ],
    "source": [
     "# Count disasters by type\n",
-    "print(df[\"disastertype\"].value_counts())\n"
+    "print(disaster_df[\"disastertype\"].value_counts())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 24,
    "id": "35fe99d3",
    "metadata": {},
    "outputs": [
@@ -358,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 25,
    "id": "40819389",
    "metadata": {},
    "outputs": [
@@ -366,7 +356,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_10523/4153435166.py:6: FutureWarning: \n",
+      "/tmp/ipykernel_24539/1204277515.py:6: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `y` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -386,7 +376,7 @@
    ],
    "source": [
     "# Count disasters per country\n",
-    "top_countries = df['country'].value_counts().head(20)\n",
+    "top_countries = disaster_df['country'].value_counts().head(20)\n",
     "\n",
     "# Plotting\n",
     "plt.figure(figsize=(14,6))\n",
@@ -410,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 29,
    "id": "1bfe28a7",
    "metadata": {},
    "outputs": [
@@ -422,7 +412,7 @@
       "License(s): CC0-1.0\n",
       "Downloading countries-of-the-world.zip to /mnt/c/Users/Bryan Keating/BK Laptop/Discovery/Kaggle/Global Natural Disaster Analysis\n",
       "  0%|                                               | 0.00/13.4k [00:00<?, ?B/s]\n",
-      "100%|██████████████████████████████████████| 13.4k/13.4k [00:00<00:00, 2.73MB/s]\n",
+      "100%|██████████████████████████████████████| 13.4k/13.4k [00:00<00:00, 2.24MB/s]\n",
       "Archive:  countries-of-the-world.zip\n",
       "  inflating: countries of the world.csv  \n"
      ]
@@ -451,7 +441,7 @@
        "      <th>Country</th>\n",
        "      <th>Region</th>\n",
        "      <th>Population</th>\n",
-       "      <th>Area (sq. mi.)</th>\n",
+       "      <th>Land Area</th>\n",
        "      <th>Pop. Density (per sq. mi.)</th>\n",
        "      <th>Coastline (coast/area ratio)</th>\n",
        "      <th>Net migration</th>\n",
@@ -598,12 +588,12 @@
        "3  American Samoa   OCEANIA                                   57794   \n",
        "4         Andorra   WESTERN EUROPE                            71201   \n",
        "\n",
-       "   Area (sq. mi.) Pop. Density (per sq. mi.) Coastline (coast/area ratio)  \\\n",
-       "0          647500                       48,0                         0,00   \n",
-       "1           28748                      124,6                         1,26   \n",
-       "2         2381740                       13,8                         0,04   \n",
-       "3             199                      290,4                        58,29   \n",
-       "4             468                      152,1                         0,00   \n",
+       "   Land Area Pop. Density (per sq. mi.) Coastline (coast/area ratio)  \\\n",
+       "0     647500                       48,0                         0,00   \n",
+       "1      28748                      124,6                         1,26   \n",
+       "2    2381740                       13,8                         0,04   \n",
+       "3        199                      290,4                        58,29   \n",
+       "4        468                      152,1                         0,00   \n",
        "\n",
        "  Net migration Infant mortality (per 1000 births)  GDP ($ per capita)  \\\n",
        "0         23,06                             163,07               700.0   \n",
@@ -627,7 +617,7 @@
        "4      8,71      6,25         NaN      NaN     NaN  "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -640,6 +630,9 @@
     "\n",
     "# Landmass dataset to pandas dataframe\n",
     "landmass_df = pd.read_csv('countries of the world.csv')\n",
+    "\n",
+    "# Rename columns for clarity\n",
+    "landmass_df.rename(columns={'Area (sq. mi.)': 'Land Area'}, inplace=True)\n",
     "landmass_df.head()"
    ]
   },
@@ -647,6 +640,46 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "89c41065",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Countries in disaster dataset: 200\n",
+      "Countries in landmass dataset: 227\n",
+      "Common countries: 177\n",
+      "{'angola', 'czech republic', 'french guiana', 'syria', 'cambodia', 'togo', 'iran', 'slovakia', 'macedonia', 'honduras', 'niger', 'libya', 'sierra leone', 'afghanistan', 'russia', 'bhutan', 'belgium', 'chad', 'romania', 'china', 'fiji', 'cuba', 'nepal', 'canada', 'cape verde', 'philippines', 'venezuela', 'moldova', 'guyana', 'australia', 'benin', 'eritrea', 'saudi arabia', 'montserrat', 'lesotho', 'somalia', 'mexico', 'haiti', 'mauritania', 'indonesia', 'ecuador', 'finland', 'vietnam', 'estonia', 'egypt', 'cameroon', 'united states', 'austria', 'ireland', 'india', 'taiwan', 'luxembourg', 'saint vincent and the grenadines', 'panama', 'slovenia', 'el salvador', 'sweden', 'new caledonia', 'comoros', 'cyprus', 'kyrgyzstan', 'tunisia', 'american samoa', 'bangladesh', 'portugal', 'costa rica', 'malawi', 'azerbaijan', 'belize', 'vanuatu', 'guinea-bissau', 'spain', 'zambia', 'tanzania', 'japan', 'dominican republic', 'mali', 'mozambique', 'italy', 'peru', 'laos', 'namibia', 'thailand', 'uruguay', 'bolivia', 'burkina faso', 'dominica', 'suriname', 'mauritius', 'solomon islands', 'serbia', 'guatemala', 'seychelles', 'netherlands', 'georgia', 'cayman islands', 'swaziland', 'turkmenistan', 'south africa', 'senegal', 'tajikistan', 'poland', 'puerto rico', 'saint helena', 'malaysia', 'tuvalu', 'algeria', 'israel', 'jordan', 'barbados', 'oman', 'argentina', 'burundi', 'chile', 'new zealand', 'albania', 'denmark', 'norway', 'saint lucia', 'guam', 'brazil', 'hungary', 'gabon', 'switzerland', 'lebanon', 'guinea', 'mongolia', 'madagascar', 'paraguay', 'jamaica', 'palau', 'greece', 'kenya', 'nicaragua', 'rwanda', 'papua new guinea', 'sudan', 'kuwait', 'iraq', 'french polynesia', 'pakistan', \"cote d'ivoire\", 'iceland', 'ethiopia', 'uzbekistan', 'qatar', 'sri lanka', 'reunion', 'ukraine', 'armenia', 'france', 'latvia', 'germany', 'kazakhstan', 'bulgaria', 'croatia', 'uganda', 'turkey', 'yemen', 'martinique', 'lithuania', 'liberia', 'hong kong', 'colombia', 'tonga', 'nigeria', 'zimbabwe', 'united arab emirates', 'ghana', 'djibouti', 'samoa', 'morocco', 'belarus', 'united kingdom', 'guadeloupe', 'grenada', 'botswana'}\n",
+      "Countries in disaster dataset not in landmass dataset: ['antigua and barbuda', 'bahamas', 'bosnia and herzegovina', 'british virgin islands', 'central african republic', 'democratic republic of the congo', 'gambia', 'kosovo', 'macao', 'micronesia', 'montenegro', 'myanmar', 'north korea', 'northern mariana islands', 'palestina', 'republic of congo', 'south korea', 'south sudan', 'timor-leste', 'tokelau', 'trinidad and tobago', 'turks and caicos islands', 'virgin islands, u.s.']\n",
+      "Countries in landmass dataset not in disaster dataset: ['andorra', 'anguilla', 'antigua & barbuda', 'aruba', 'bahamas, the', 'bahrain', 'bermuda', 'bosnia & herzegovina', 'british virgin is.', 'brunei', 'burma', 'central african rep.', 'congo, dem. rep.', 'congo, repub. of the', 'cook islands', 'east timor', 'equatorial guinea', 'faroe islands', 'gambia, the', 'gaza strip', 'gibraltar', 'greenland', 'guernsey', 'isle of man', 'jersey', 'kiribati', 'korea, north', 'korea, south', 'liechtenstein', 'macau', 'maldives', 'malta', 'marshall islands', 'mayotte', 'micronesia, fed. st.', 'monaco', 'n. mariana islands', 'nauru', 'netherlands antilles', 'saint kitts & nevis', 'san marino', 'sao tome & principe', 'singapore', 'st pierre & miquelon', 'trinidad & tobago', 'turks & caicos is', 'virgin islands', 'wallis and futuna', 'west bank', 'western sahara']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Clean and compare country names in both datasets\n",
+    "disaster_df['country'] = disaster_df['country'].str.strip().str.lower()\n",
+    "landmass_df['Country'] = landmass_df['Country'].str.strip().str.lower()\n",
+    "\n",
+    "# Unique countries in both datasets\n",
+    "disaster_countries = set(disaster_df['country'].unique())\n",
+    "landmass_countries = set(landmass_df['Country'].unique())\n",
+    "print(f\"Countries in disaster dataset: {len(disaster_countries)}\")\n",
+    "print(f\"Countries in landmass dataset: {len(landmass_countries)}\")\n",
+    "print(f\"Common countries: {len(disaster_countries.intersection(landmass_countries))}\")\n",
+    "\n",
+    "# Countries not in landmass dataset\n",
+    "missing_countries = sorted(disaster_countries - landmass_countries)\n",
+    "print(f\"Countries in disaster dataset not in landmass dataset: {missing_countries}\")\n",
+    "\n",
+    "# Countries not in disaster dataset\n",
+    "extra_countries = sorted(landmass_countries - disaster_countries)\n",
+    "print(f\"Countries in landmass dataset not in disaster dataset: {extra_countries}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d65bf39c",
    "metadata": {},
    "outputs": [],
    "source": []
